# rust-litex-example

./: Cargo.toml  README.md  build.rs  build.sh  colorlight_5a_75x.py  memory.x  simsoc.py
.cargo/: config  flash.sh
controllerpcb/: controllerpcb.kicad_pcb  controllerpcb.kicad_prl  controllerpcb.kicad_pro  controllerpcb.kicad_sch
src/: main.rs
stepper/: Makefile  modegen.vhdl  stepper.py  stepper.vhdl  stepper_tb.vhdl
